# knmi-dataset-downloader

./: .gitignore  README.md  generate_api.sh  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/knmi_dataset_downloader/: __init__.py  api_key.py  cli.py  dataset.py  defaults.py  downloader.py
src/knmi_dataset_downloader/knmi_dataset_api/: api_client.py  kiota-lock.json
src/knmi_dataset_downloader/knmi_dataset_api/models/: file_download.py  file_summary.py  list_files_response.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/: v1_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/: datasets_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/: with_dataset_name_item_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/versions/: versions_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/versions/item/: with_version_item_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/versions/item/files/: files_request_builder.py  get_order_by_query_parameter_type.py  get_sorting_query_parameter_type.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/versions/item/files/item/: with_filename_item_request_builder.py
src/knmi_dataset_downloader/knmi_dataset_api/v1/datasets/item/versions/item/files/item/url/: url_request_builder.py
tests/: __init__.py  test_api_key.py  test_cli.py  test_downloader.py
tests/integration/: test_cli.py  test_dataset.py  test_downloader.py
